intervalsets-macros/tests/ui/set_empty_segment.rs
use intervalsets_macros::set;

fn main() {
    let _ = set!("{ U [0, 10]}");
}
